<?xml version="1.0" encoding="utf-8"?>
<ScrollView	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollViewCashCalc"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:fillViewport="true">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/textViewBills"
			android:gravity="center_horizontal"
			android:background="#8fbc8f"
			android:textColor="#333"
			android:textStyle="bold" />
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/tableLayoutBills">
			<TableRow
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tableRowBillsDenom">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="24sp"
					android:text="100"
					android:gravity="center_horizontal"
					android:padding="5sp"
					android:width="53.3333333sp"
					android:id="@+id/textViewBillsDenom100"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="24sp"
					android:text="50"
					android:gravity="center_horizontal"
					android:padding="5sp"
					android:width="53.3333333sp" 
					android:id="@+id/textViewBillsDenom50"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="24sp"
					android:text="20"
					android:gravity="center_horizontal"
					android:padding="5sp"
					android:width="53.3333333sp" 
					android:id="@+id/textViewBillsDenom20"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="24sp"
					android:text="10"
					android:gravity="center_horizontal"
					android:padding="5sp"
					android:width="53.3333333sp"
					android:id="@+id/textViewBillsDenom10"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="24sp"
					android:text="5"
					android:gravity="center_horizontal"
					android:padding="5sp"
					android:width="53.3333333sp"
					android:id="@+id/textViewBillsDenom5"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="24sp"
					android:text="1"
					android:gravity="center_horizontal"
					android:padding="5sp"
					android:width="53.3333333sp"
					android:id="@+id/textViewBillsDenom1"/>
			</TableRow>
			<TableRow
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tableRowBillsQty">
				<com.cashcalc.NumberPicker
					android:layout_width="53.3333333sp"
					android:id="@+id/numberPickerBillsQty100" android:layout_height="wrap_content"/>
				<com.cashcalc.NumberPicker
					android:layout_height="wrap_content"
					android:layout_width="53.3333333sp"
					android:id="@+id/numberPickerBillsQty50"/>
				<com.cashcalc.NumberPicker
					android:layout_height="wrap_content"
					android:layout_width="53.3333333sp"
					android:id="@+id/numberPickerBillsQty20"/>
				<com.cashcalc.NumberPicker
					android:layout_height="wrap_content"
					android:layout_width="53.3333333sp"
					android:id="@+id/numberPickerBillsQty10"/>
				<com.cashcalc.NumberPicker
					android:layout_height="wrap_content"
					android:layout_width="53.3333333sp"
					android:id="@+id/numberPickerBillsQty5"/>
				<com.cashcalc.NumberPicker
					android:layout_height="wrap_content"
					android:layout_width="53.3333333sp"
					android:id="@+id/numberPickerBillsQty1"/>
			</TableRow>
		</TableLayout>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/textViewCoins"
			android:gravity="center_horizontal"
			android:background="#8fbc8f"
			android:textColor="#333"
			android:textStyle="bold" />
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/tableLayoutCoins">
			<TableRow
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/tableRowCoinsDenom">
				<TextView
					android:textSize="20sp"
					android:text="1.00"
					android:layout_width="wrap_content"
					android:gravity="center_horizontal"
					android:padding="5sp"
					android:width="53.3333333sp"
					android:layout_height="wrap_content"
					android:id="@+id/textViewCoinsDenom100" />
				<TextView
					android:textSize="20sp"
					android:text="0.50" 
					android:layout_width="wrap_content" 
					android:gravity="center_horizontal"
					android:padding="5sp" 
					android:width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/textViewCoinsDenom50" />
				<TextView
					android:textSize="20sp"
					android:text="0.25"
					android:layout_width="wrap_content" 
					android:gravity="center_horizontal"
					android:padding="5sp" 
					android:width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/textViewCoinsDenom25" />
				<TextView 
					android:textSize="20sp" 
					android:text="0.10" 
					android:layout_width="wrap_content" 
					android:gravity="center_horizontal"
					android:padding="5sp" 
					android:width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/textViewCoinsDenom10" />
				<TextView 
					android:textSize="20sp" 
					android:text="0.05" 
					android:layout_width="wrap_content" 
					android:gravity="center_horizontal"
					android:padding="5sp" 
					android:width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/textViewCoinsDenom5" />
				<TextView 
					android:textSize="20sp" 
					android:text="0.01" 
					android:layout_width="wrap_content" 
					android:gravity="center_horizontal"
					android:padding="5sp" 
					android:width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/textViewCoinsDenom1" />
			</TableRow>
			<TableRow 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content" 
				android:id="@+id/tableRowCoinsQty">
				<com.cashcalc.NumberPicker 
					android:layout_width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/numberPickerCoinsQty100" />
				<com.cashcalc.NumberPicker 
					android:layout_width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/numberPickerCoinsQty50" />
				<com.cashcalc.NumberPicker 
					android:layout_width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/numberPickerCoinsQty25" />
				<com.cashcalc.NumberPicker 
					android:layout_width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/numberPickerCoinsQty10" />
				<com.cashcalc.NumberPicker 
					android:layout_width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/numberPickerCoinsQty5" />
				<com.cashcalc.NumberPicker 
					android:layout_width="53.3333333sp" 
					android:layout_height="wrap_content" 
					android:id="@+id/numberPickerCoinsQty1" />
			</TableRow>
		</TableLayout>
		<Button
			android:id="@+id/buttonCalculate" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:text="Calculate" />
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/tableLayoutTotal">
			<TableRow
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/tableRowTotalBills">
				<TextView
					android:id="@+id/textViewBillTotalLabel"
					android:layout_width="160sp" 
					android:layout_height="wrap_content"
					android:text="@string/textViewBillTotalLabel"
					android:gravity="left"
					android:textColor="#333"
					android:background="#8fbc8f"
					android:textStyle="bold" />
				<TextView
					android:id="@+id/textViewBillTotal"
					android:layout_width="160sp" 
					android:layout_height="wrap_content"
					android:text="@string/textViewBillTotal"
					android:gravity="right"
					android:textColor="#333"
					android:background="#8fbc8f"
					android:textStyle="bold" />
			</TableRow>
			<TableRow
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/tableRowTotalCoins">
				<TextView
					android:id="@+id/textViewCoinTotalLabel"
					android:layout_width="160sp" 
					android:layout_height="wrap_content"
					android:text="@string/textViewCoinTotalLabel"
					android:gravity="left"
					android:textColor="#333"
					android:background="#8fbc8f"
					android:textStyle="bold" />
				<TextView
					android:id="@+id/textViewCoinTotal"
					android:layout_width="160sp" 
					android:layout_height="wrap_content"
					android:text="@string/textViewCoinTotal"
					android:gravity="right"
					android:textColor="#333"
					android:background="#8fbc8f"
					android:textStyle="bold" />
			</TableRow>
			<TableRow
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/tableRowTotalBillCoin">
				<TextView
					android:id="@+id/textViewBillCoinTotalLabel"
					android:layout_width="160sp" 
					android:layout_height="wrap_content"
					android:text="@string/textViewBillCoinTotalLabel"
					android:gravity="left"
					android:textColor="#333"
					android:background="#8fbc8f"
					android:textStyle="bold" />
				<TextView
					android:id="@+id/textViewBillCoinTotal"
					android:layout_width="160sp" 
					android:layout_height="wrap_content"
					android:text="@string/textViewBillCoinTotal"
					android:gravity="right"
					android:textColor="#333"
					android:background="#8fbc8f"
					android:textStyle="bold" />
			</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>